<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/scoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Score :0" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/play_again"
        android:textSize="15sp"/>
<Button
        android:id="@+id/goToLeaderBoardButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/see_leaderboard"
    android:backgroundTint="@color/black"
        android:textSize="15sp"/>

</LinearLayout>